<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/backGround"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00D4C2"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="8dp"
        android:fontFamily="cursive"
        android:gravity="center"
        android:text="@string/hello_my_friend"

        android:textColor="#FF3700B3"
        android:textSize="50sp"
        android:textStyle="normal" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="5dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="cursive"
        android:gravity="center"
        android:hint="@string/you"
        android:inputType="textPersonName"
        android:text="@string/name"
        android:textColor="#FFFFFFFF"
        android:textSize="42sp"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="20dp"
        android:backgroundTint="#FFC107"
        android:gravity="center"
        android:text="@string/good_luck_button"
        android:textStyle="bold|normal" />

    <Switch
        android:id="@+id/switching"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="8dp"
        android:text="@string/success_mode"
        android:textColor="#9C27B0"
        android:textSize="24sp"
        android:textStyle="italic" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="201dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:buttonTint="#FFFFFF"
        android:text="@string/wish_box"
        android:textColor="#FFFFFF"
        android:textColorLink="#FFC107"
        android:textCursorDrawable="@android:drawable/checkbox_on_background"
        android:textSize="36sp"
        android:textStyle="bold" />

    <ToggleButton
        android:id="@+id/toggleButton"
        android:layout_gravity="center_horizontal"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="100dp"
        android:backgroundTint="#FFEB3B"
        android:button="@android:drawable/btn_star_big_on"
        android:buttonTint="#9C27B0"
        android:checked="false"
        android:textAlignment="center"
        android:textColor="#E91E63"
        android:textOff="@string/click_to_see_task_2_3"
        android:textSize="18sp"
        android:textStyle="bold|italic" />

</LinearLayout>